--- a/src/main/resources/rc/project/css/Display.css
+++ b/src/main/resources/rc/project/css/Display.css
@@ -20,4 +20,8 @@
     -fx-background-color: radial-gradient(center 50% 50% , radius 65% , #1FB480, #333333);
 }
 
+.gradient3 {
+    -fx-background-color: radial-gradient(center 50% 50% , radius 90% , #9d009d, #555555);
+}
+
 
