--- a/src/main/resources/rc/project/fxml/Dashboard.fxml
+++ b/src/main/resources/rc/project/fxml/Dashboard.fxml
@@ -68,26 +68,31 @@
       </AnchorPane>
       <AnchorPane fx:id="display" style="-fx-background-color: #333333;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane fx:id="changeMe" prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #333333;" stylesheets="@../css/Display.css" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+            <AnchorPane fx:id="changeMe" prefHeight="500.0" prefWidth="840.0" style="-fx-background-color: #333333;" stylesheets="@../css/Display.css" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
                <children>
                   <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <Text fill="WHITE" layoutX="360.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome !">
+                        <Text fill="WHITE" layoutX="330.0" layoutY="76.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Welcome !">
                            <font>
-                              <Font name="System Bold" size="24.0" />
+                              <Font name="System Bold" size="36.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="324.0" layoutY="161.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Take a look at our best offers">
+                        <Text fill="WHITE" layoutX="309.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Take a look at our best offers">
                            <font>
-                              <Font size="15.0" />
+                              <Font size="17.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="361.0" layoutY="662.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Car Rental 2.0® v1.0.0" />
-                        <GridPane fx:id="gridPaneHome" layoutX="10.0" layoutY="310.0" maxHeight="0.0" maxWidth="0.0" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0">
+                        <GridPane fx:id="gridPaneHome" layoutX="10.0" layoutY="250.0" maxHeight="0.0" maxWidth="0.0" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0">
                            <rowConstraints>
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" />
                            </rowConstraints>
                         </GridPane>
+                        <Text fill="WHITE" layoutX="686.0" layoutY="477.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Car Rental 2.0® v1.0.0" />
+                        <Text fill="WHITE" layoutX="257.0" layoutY="454.0" strokeType="OUTSIDE" strokeWidth="0.0" text="See your order in the Status tab or browse more cars">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Text>
                      </children>
                   </Pane>
                </children>
