--- a/src/main/resources/rc/project/fxml/Account.fxml
+++ b/src/main/resources/rc/project/fxml/Account.fxml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="rc.project.Account"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="anchorPane" prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Account">
+    <children>
+        <Pane prefHeight="680.0" prefWidth="840.0" style="-fx-background-color: #555555;" styleClass="display" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <Text fill="#ebebeb" layoutY="83.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Account info" textAlignment="CENTER" wrappingWidth="840.0">
+                    <font>
+                        <Font name="System Bold" size="36.0" />
+                    </font>
+                </Text>
+            <Separator layoutY="106.0" prefHeight="5.0" prefWidth="840.0" />
+            <Text fx:id="name" layoutX="235.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="271.13671875">
+               <font>
+                  <Font size="15.0" />
+               </font></Text>
+            <Label layoutX="100.0" layoutY="200.0" prefHeight="30.0" prefWidth="82.0" text="Name:" textFill="#ebebeb">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="100.0" layoutY="250.0" prefHeight="21.0" prefWidth="53.0" text="Email:" textFill="#ebebeb">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Label layoutX="100.0" layoutY="300.0" prefHeight="17.0" prefWidth="53.0" text="Phone:" textFill="#ebebeb">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Label>
+            <Button fx:id="signOut" layoutX="350.0" layoutY="574.0" mnemonicParsing="false" onAction="#signOutOnAction" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Sign out" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+            <Text fx:id="email" layoutX="235.0" layoutY="266.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="252.13671875">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            <Text fx:id="phone" layoutX="235.0" layoutY="316.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="271.13671875">
+               <font>
+                  <Font size="15.0" />
+               </font>
+            </Text>
+            </children>
+        </Pane>
+    </children>
+   <stylesheets>
+      <URL value="@../css/Display.css" />
+      <URL value="@../css/buttonStyle.css" />
+   </stylesheets>
 </AnchorPane>
