--- a/src/main/resources/rc/project/fxml/Dealer.fxml
+++ b/src/main/resources/rc/project/fxml/Dealer.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #555555;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Dealer">
+<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #555555;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.Dealer">
    <children>
       <Pane prefHeight="720.0" prefWidth="1080.0" style="-fx-background-color: #333333;">
          <children>
@@ -52,7 +52,7 @@
                               <Font name="System Bold" size="15.0" />
                            </font>
                         </Button>
-                        <Button fx:id="login" mnemonicParsing="false" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Login" textFill="WHITE">
+                        <Button fx:id="login" mnemonicParsing="false" onAction="#signOutOnAction" prefHeight="40.0" prefWidth="140.0" styleClass="record-sales" text="Sign out" textFill="WHITE">
                            <HBox.margin>
                               <Insets left="20.0" />
                            </HBox.margin>
