--- a/src/main/resources/rc/project/fxml/OrderStatus.fxml
+++ b/src/main/resources/rc/project/fxml/OrderStatus.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane maxHeight="50.0" prefHeight="50.0" prefWidth="800.0" style="-fx-background-color: transparent;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="rc.project.OrderStatus">
    <children>
@@ -12,6 +15,51 @@
             <URL value="@../css/Display.css" />
             <URL value="@../css/buttonStyle.css" />
          </stylesheets>
+         <children>
+            <HBox prefHeight="50.0" prefWidth="800.0">
+               <children>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Car model:" translateX="40.0" translateY="15.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="carModel" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="40.0" translateY="15.0">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Date:" translateX="250.0" translateY="15.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="carDate" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="250.0" translateY="15.0">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" translateX="500.0" translateY="15.0">
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+                  <Text fx:id="carStatus" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" translateX="500.0" translateY="15.0">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Text>
+               </children>
+            </HBox>
+         </children>
       </Pane>
    </children>
 </AnchorPane>
